# PigBTeammates

./: .gitignore  LICENSE  README.md
Network/FuckHTTP1.1/: CMakeLists.txt
Network/FuckHTTP1.1/client/: CMakeLists.txt
Network/FuckHTTP1.1/client/include/: ResponseMessage.h
Network/FuckHTTP1.1/client/src/client/: client.cpp
Network/FuckHTTP1.1/client/src/message/: CMakeLists.txt  ResponseMessage.cpp
Network/FuckHTTP1.1/client/src/responseMessage/: CMakeLists.txt  ResponseMessage.cpp  demo_test.cpp
Network/FuckHTTP1.1/requestMessage/include/: RequestMessage.h
Network/FuckHTTP1.1/responseMessage/: CMakeLists.txt
Network/FuckHTTP1.1/responseMessage/include/: ResponseMessage.h
Network/FuckHTTP1.1/responseMessage/test/: CMakeLists.txt  main.cpp
Network/FuckHTTP1.1/simpleclient/include/: HttpClient.h
