cmake_minimum_required(VERSION 3.1)
project(FuckHTTP1.1)

SET(SDK_VERSION "V0.01")
execute_process(COMMAND date +%s OUTPUT_VARIABLE COMPILE_DATE OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND git rev-parse --short HEAD OUTPUT_VARIABLE GIT_COMMITID OUTPUT_STRIP_TRAILING_WHITESPACE)
SET(PROJECT_VERSION ${SDK_VERSION}_${GIT_COMMITID}_${COMPILE_DATE})
message("-- PROJECT_VERSION +++++++++++++++++++ ${PROJECT_VERSION}")

add_subdirectory(src/responseMessage)



